# automaton-auditor

./: .env.example  .gitignore  README.md  benchmark_2_log.txt  benchmark_report.md  benchmark_results.csv  create_test_pdf.py  evidence_output.json  final_audit_report.md  langgraph_detailed_audit.md  pyproject.toml  roo_code_audit_report.md  roo_code_evidence.json  test_doc_tools.py  test_invoke.py  test_state.py
config/: benchmark_targets.json
reports/: interim_report.md
src/: benchmark.py  graph.py  main.py  meta_benchmark.py  state.py
src/core/: evidence_graph.py  evidence_registry.py
src/nodes/: detectives.py  judges.py  justice.py  meta_audit.py
src/prompts/: judge_prompts.py
src/tools/: doc_tools.py  repo_tools.py  report_tools.py  vision_tools.py
tests/: test_benchmark.py  test_contradictions.py  test_detectives.py  test_evidence_core.py  test_justice_logic.py  test_meta_audit_logic.py  test_repo_tools.py  test_state.py
